<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:paddingVertical="5dp"
    android:id="@+id/activity_add_meeting_layout"
    tools:context=".ui_user.AddMeetingActivity">


<!-- TOPIC -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_topic"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_ed_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_notes_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/topic"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


<!-- ROOM -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_layout_room"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_layout_topic">

        <AutoCompleteTextView
            android:id="@+id/ti_ed_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_meeting_room_24"
            android:drawablePadding="20dp"
            android:inputType="none"
            android:hint="@string/room"
            android:textColor="@color/hint_color"/>

    </com.google.android.material.textfield.TextInputLayout>


<!-- DATE -->
    <Button
        android:id="@+id/btn_picker_date"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="17dp"
        android:hint="@string/date"
        android:textAlignment="viewStart"
        android:textColor="@color/hint_color"
        app:icon="@drawable/ic_baseline_edit_calendar_24"
        app:iconPadding="19dp"
        app:iconTint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_layout_room" />


<!-- TIME -->
    <Button
        android:id="@+id/btn_picker_time"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="17dp"
        android:hint="@string/time"
        android:textAlignment="viewStart"
        android:textColor="@color/hint_color"
        app:icon="@drawable/ic_baseline_access_time_24"
        app:iconPadding="19dp"
        app:iconTint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_picker_date" />


<!-- PARTICIPANTS -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_layout_participants"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_picker_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_ed_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_people_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/participants"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


<!-- CHIP_GROUP -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ti_layout_participants">

    </com.google.android.material.chip.ChipGroup>


<!-- BUTTON CREATE -->
    <Button
        android:id="@+id/button_create_meeting"
        style="?materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>