<resources>
    <string name="app_name">Ma réu</string>
    <string name="meeting_populate">%1$s - %2$s - %3$s</string>
    <string name="not_mail_valid">It is not a valid mail</string>
    <string name="topic">Topic</string>
    <string name="room">Room</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="participants">Participants</string>
    <string name="create">CREATE</string>
    <string name="berlin">Berlin</string>
    <string name="london">Londres</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="madrid">Madrid</string>
    <string name="moscow">Moscou</string>
    <string name="paris">Paris</string>
    <string name="beijing">Pekin</string>
    <string name="rome">Rome</string>
    <string name="tokyo">Tokyo</string>
    <string name="washington">Washington</string>
    <string name="filter">Filter</string>
    <string name="reset_filter">Reset filter</string>
    <string name="create_meeting">Create new meeting</string>
    <string name="create_meeting_is_empty">Please complete all information before create a meeting</string>
    <string name="create_meeting_room_is_not_free">Room is not free please change room or change time</string>
    <string name="date_info">%1$02d:%2$02d</string>

    <string-array name="list_room">
        <item>Berlin</item>
        <item>Londres</item>
        <item>Luxembourg</item>
        <item>Madrid</item>
        <item>Moscou</item>
        <item>Paris</item>
        <item>Pekin</item>
        <item>Rome</item>
        <item>Tokyo</item>
        <item>Washington</item>
    </string-array>


</resources>